# SKEEEK

./: .firebaserc  .gitignore  Cargo.toml  README.md  firebase.json  index.html  index.scss  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: deploy.yml
js/: gameLogic.ts  index.ts
pkg/: .firebaserc  index.html  snake_wasm.js  snake_wasm_bg.wasm
pkg/.firebase/: hosting..cache
src/: components.rs  data.rs  lib.rs  main.rs  util.rs
static/: index.html  style.css
