[package]
name = "snake_wasm"
version = "0.1.0"
authors = ["Nathan Hare <nathanhare32@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.58"
wasm-bindgen = "0.2.68"