[package]
name = "snek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.63"
leptos = "0.3.0"
stylers = "0.3.1"
console_error_panic_hook = "0.1.7"
log = "0.4.14"
console_log = { version = "1", features = ["color"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
num = "0.4.0"
